# scrapemaster-intelligence

./: .gitattributes  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  DEPLOYMENT_STATUS.md  DEPLOY_NOW.md  Dockerfile  LEAN_DEPLOYMENT.md  LICENSE  Makefile  PRODUCTION_CHECKLIST.md  Procfile  QUICK_START_REVENUE.md  RAILWAY_DASHBOARD_DEPLOY.md  RAILWAY_DEPLOY_STEPS.md  README.md  deploy.ps1  deploy_to_railway.md  docker-compose.yml  health_check.py  pyproject.toml  railway.json  railway_start.sh  requirements-dev.txt  requirements.txt  setup.py  start.sh  start_scrapemaster.bat  start_scrapemaster.ps1  test_app.py
.github/workflows/: ci.yml
config/: env.example  production_proxies.json.example
marketing/: client_acquisition_playbook.md  outreach_templates.md
src/: app.py  landing_page.py  production_app.py  quick_revenue.py  simple_app.py
src/core/: __init__.py  config.py  database.py  models.py  monitoring.py  proxy_loader.py  scraper.py  stealth_scraper.py
